--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -62,7 +62,7 @@ set -g status-style "bg=default fg=colour7"
 set -g status-left " "
 set -g status-right-length 100
 set -g status-right "#[fg=colour7]#[bg=default] #(~/.config/scripts/battery.sh) "
-# set -g status-right "#S #[fg=colour7]#[bg=default] #{network_bandwidth}#(~/.config/scripts/battery.sh) \uf0e7#[fg=colour7]  %d/%m #[fg=colour7] %H:%M:%S"
+# set -g status-right "#S #[fg=colour7]#[bg=default]#(~/.config/scripts/ncspot.sh song-artist)   #{network_bandwidth}#(~/.config/scripts/battery.sh) \uf0e7#[fg=colour7]  %d/%m #[fg=colour7] %H:%M:%S"
 
 
 # set -g window-status-current-format "#[fg=white]#[bg=default]#W"
@@ -122,7 +122,7 @@ bind y setw synchronize-panes
 bind space next-window
 bind bspace previous-window
 
-# default ones but slightly resized
+# default ones but slightly resized [tmux lsw]
 bind M-3 select-layout "e977,201x56,0,0[201x9,0,0,55,201x46,0,10{100x46,0,10,54,100x46,101,10,53}]"
 bind M-4 select-layout "3a2c,201x56,0,0{108x56,0,0,6,92x56,109,0[92x42,109,0,0,92x13,109,43,5]}"
 bind M-5 select-layout "9c2b,201x56,0,0[201x44,0,0{100x44,0,0,65,100x44,101,0,68},201x11,0,45,66]"
@@ -196,7 +196,7 @@ bind C-n if-shell -F '#{==:#{session_name},org}' {
 # toggle session switcher popup
 bind C-s display-popup -BE -S fg=color0 -h 10% -w 100% -x 0% -y 100% "~/.config/scripts/tmux-sessions-popup.sh"
 
-bind C-\\ if-shell -F '#{==:#{session_name},scratch}' {
+bind C-_ if-shell -F '#{==:#{session_name},scratch}' { # it actually triggers with C-/
   detach-client
 } {
   display-popup -BE -S fg=color0 -h 35% -w 100% -x 0% -y 100% "tmux new-session -A -s scratch"
@@ -208,9 +208,8 @@ bind C-p if-shell -F '#{==:#{session_name},scratch}' {
   display-popup -E -S fg=color0 -h 75% -w 75% -x C -y C "tmux new-session -A -s scratch"
 }
 
-# bind-key A display-popup -d '#{pane_current_path}' -xC -yC -w 80% -h 80% -E "htop"
-
 # capture content of pane |> filter |> fzf |> action
 bind-key C-u run-shell -b "bash ${HOME}/.config/scripts/fzf-urls"
 # bind-key C-u run-shell -b "tmux capture-pane -J -p | grep -oE '(https?):\/\/.*[^>]' | fzf-tmux -d20 --multi --bind alt-a:select-all,alt-d:deselect-all | xargs open"
 
+bind-key P run-shell -b 'echo "playpause" | nc -U /tmp/ncspot-501/ncspot.sock > /dev/null'
