Tmux layout update

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -125,7 +125,7 @@ bind bspace previous-window
 # default ones but slightly resized [tmux lsw]
 bind M-3 select-layout "e977,201x56,0,0[201x9,0,0,55,201x46,0,10{100x46,0,10,54,100x46,101,10,53}]"
 bind M-4 select-layout "3a2c,201x56,0,0{108x56,0,0,6,92x56,109,0[92x42,109,0,0,92x13,109,43,5]}"
-bind M-5 select-layout "9c2b,201x56,0,0[201x44,0,0{100x44,0,0,65,100x44,101,0,68},201x11,0,45,66]"
+bind M-5 select-layout "e81f,228x65,0,0[228x55,0,0,4,228x9,0,56{116x9,0,56,33,111x9,117,56,5}]"
 
 # zoomig in/out
 bind -n M-z resize-pane -Z
