--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,8 +1,8 @@
 # TMUX configuration
 
 # use C-s, since it's on the home row and easier to hit than C-b
-set -g prefix C-s
 unbind-key C-s
+set -g prefix C-s
 bind-key C-s send-prefix
 
 # vi by default when $EDITOR contains 'vi'
@@ -22,6 +22,7 @@ set -g focus-events on
 
 # on a window close, renumber the remaining base on base-index
 set -g base-index 1
+setw -g pane-base-index 1
 set -g renumber-windows on
 
 set -sg escape-time 0
@@ -83,8 +84,8 @@ set -g window-status-bell-style "fg=red,nobold"
 set -w -g aggressive-resize on
 
 
-bind r refresh-client; display-message "client reloaded."
-bind R source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
+# bind r refresh-client; display-message "client reloaded."
+bind r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
 # toggle statusbar
 bind C-b set status
@@ -166,10 +167,11 @@ bind -n M-k if-shell "$is_vim" 'send-keys M-k'  'select-pane -U'
 bind -n M-l if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
 
 # Setup 'v' to begin selection as in Vim
-bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-selection
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi V send -X select-line
+bind -T copy-mode-vi y send -X copy-selection
 bind -T copy-mode-vi 'C-v' send -X begin-selection \; send -X rectangle-toggle
-bind-key -T copy-mode-vi DoubleClick1Pane if-shell -Ft'{mouse}' '#{alternate_on}' "send-keys -M" "copy-mode -t'{mouse}'; send-keys -t'{mouse}' -X select-word"
+bind -T copy-mode-vi DoubleClick1Pane if-shell -Ft'{mouse}' '#{alternate_on}' "send-keys -M" "copy-mode -t'{mouse}'; send-keys -t'{mouse}' -X select-word"
 bind-key -T copy-mode-vi TripleClick1Pane if-shell -Ft'{mouse}' '#{alternate_on}' "send-keys -M" "copy-mode -t'{mouse}'; send-keys -t'{mouse}' -X select-line"
 bind-key -T copy-mode MouseDragEnd1Pane send-keys -X copy-pipe-no-clear pbcopy
 unbind-key -T copy-mode-vi MouseDragEnd1Pane
@@ -194,7 +196,7 @@ bind C-n if-shell -F '#{==:#{session_name},org}' {
 }
 
 # toggle session switcher popup
-bind C-s display-popup -BE -S fg=color0 -h 10% -w 100% -x 0% -y 100% "~/.config/scripts/tmux-sessions-popup.sh"
+bind C-s display-popup -BE -S fg=color0 -h 2 -w 100% -x 0% -y 100% "~/.config/scripts/tmux-sessions-popup.sh"
 
 bind C-_ if-shell -F '#{==:#{session_name},scratch}' { # it actually triggers with C-/
   detach-client
@@ -212,4 +214,14 @@ bind C-p if-shell -F '#{==:#{session_name},scratch}' {
 bind-key C-u run-shell -b "bash ${HOME}/.config/scripts/fzf-urls"
 # bind-key C-u run-shell -b "tmux capture-pane -J -p | grep -oE '(https?):\/\/.*[^>]' | fzf-tmux -d20 --multi --bind alt-a:select-all,alt-d:deselect-all | xargs open"
 
-bind-key P run-shell -b 'echo "playpause" | nc -U /tmp/ncspot-501/ncspot.sock > /dev/null'
+# list of plugins
+set -g @plugin 'tmux-plugins/tpm'
+
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @resurrect-save 'F'
+set -g @resurrect-restore 'G'
+
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
