Small nvim config change

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,5 @@
 # TMUX configuration
+set-option -g default-terminal "tmux-direct"
 
 # use C-s, since it's on the home row and easier to hit than C-b
 unbind-key C-s
@@ -56,14 +57,13 @@ set -g automatic-rename-format '#{b:pane_current_path}'
 
 set -w -g clock-mode-colour green
 
-set -g status-interval 1
+set -g status-interval 5
 set -g status-position bottom # bottom #top
 set -g status-justify left # absolute-centre
 set -g status-style "bg=default fg=colour7"
 set -g status-left " "
 set -g status-right-length 100
-set -g status-right "#[fg=colour7]#[bg=default] #(~/.config/scripts/battery.sh) "
-# set -g status-right "#S #[fg=colour7]#[bg=default]#(~/.config/scripts/ncspot.sh song-artist)   #{network_bandwidth}#(~/.config/scripts/battery.sh) \uf0e7#[fg=colour7]  %d/%m #[fg=colour7] %H:%M:%S"
+set -g status-right "#[fg=colour240]#(ip.sh)(#(,ipl))#[fg=colour7]#[bg=default] #(battery.sh) "
 
 
 # set -g window-status-current-format "#[fg=white]#[bg=default]#W"
@@ -222,6 +222,8 @@ set -g @resurrect-save 'F'
 set -g @resurrect-restore 'G'
 
 set -g @plugin 'tmux-plugins/tmux-continuum'
+
+set -g @plugin 'minhdanh/tmux-network-speed'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
