Add script to toggle a pane in tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,6 @@
 # TMUX configuration
-set-option -g default-terminal "tmux-direct"
+set-option -g default-terminal "xterm-256color"
+
 
 # use C-s, since it's on the home row and easier to hit than C-b
 unbind-key C-s
@@ -214,6 +215,8 @@ bind C-p if-shell -F '#{==:#{session_name},scratch}' {
 bind-key C-u run-shell -b "bash ${HOME}/.config/scripts/fzf-urls"
 # bind-key C-u run-shell -b "tmux capture-pane -J -p | grep -oE '(https?):\/\/.*[^>]' | fzf-tmux -d20 --multi --bind alt-a:select-all,alt-d:deselect-all | xargs open"
 
+bind-key C-j run-shell -b "bash ${HOME}/.config/scripts/tmux-toggle-pane.sh"
+
 # list of plugins
 set -g @plugin 'tmux-plugins/tpm'
 
@@ -223,7 +226,7 @@ set -g @resurrect-restore 'G'
 
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
-set -g @plugin 'minhdanh/tmux-network-speed'
+# set -g @plugin 'datamadsen/nunchux'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
