Improve term colors in tmux config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,9 @@
 # TMUX configuration
-set-option -g default-terminal "xterm-256color"
+set -g default-terminal "tmux-256color"
+set-option -sa terminal-overrides ',xterm-256color:RGB'
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
+
 
 
 # use C-s, since it's on the home row and easier to hit than C-b
@@ -215,7 +219,8 @@ bind C-p if-shell -F '#{==:#{session_name},scratch}' {
 bind-key C-u run-shell -b "bash ${HOME}/.config/scripts/fzf-urls"
 # bind-key C-u run-shell -b "tmux capture-pane -J -p | grep -oE '(https?):\/\/.*[^>]' | fzf-tmux -d20 --multi --bind alt-a:select-all,alt-d:deselect-all | xargs open"
 
-bind-key C-j run-shell -b "bash ${HOME}/.config/scripts/tmux-toggle-pane.sh"
+bind-key C-j run-shell -b "bash ${HOME}/.config/scripts/tmux-toggle-pane.sh 'bottom_pane'"
+bind-key C-l run-shell -b "bash ${HOME}/.config/scripts/tmux-toggle-pane.sh 'right_sidebar' '-h -f -l 20%'"
 
 # list of plugins
 set -g @plugin 'tmux-plugins/tpm'
