--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,8 +4,6 @@ set-option -sa terminal-overrides ',xterm-256color:RGB'
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
-
-
 # use C-s, since it's on the home row and easier to hit than C-b
 unbind-key C-s
 set -g prefix C-s
@@ -34,18 +32,15 @@ set -g renumber-windows on
 set -sg escape-time 0
 set -g repeat-time 0
 
-set -g set-titles off #on
-set -g set-titles-string "#T - #W"
-
-set -g allow-rename off
-
 set -w -g display-panes-time 1500
 
-set -w -g monitor-activity off
-set -g visual-activity off
-set -g visual-bell off
-set -g visual-silence off
-set -g bell-action none
+set -w -g monitor-activity on
+set-window-option -g window-status-activity-style 'fg=colour1'
+
+# set -g visual-activity off
+# set -g visual-bell off
+# set -g visual-silence off
+# set -g bell-action none
 
 set -g history-limit 50000
 
@@ -57,7 +52,7 @@ set -g pane-border-style fg=color0
 
 set -g popup-border-lines single
 
-# name every window as current directoy
+# name every window as current directory
 set -g automatic-rename-format '#{b:pane_current_path}'
 
 set -w -g clock-mode-colour green
@@ -81,15 +76,15 @@ set -g window-status-current-format "•"
 set -g window-status-current-style "#{?window_zoomed_flag,fg=yellow,fg=white,nobold}"
 set -g window-status-bell-style "fg=red,nobold"
 
-# Rather than constraining window size to the maximum size of any client
+# rather than constraining window size to the maximum size of any client
 # connected to the *session*, constrain window size to the maximum size of any
-# client connected to *that window*. Much more reasonable.
-# Combined with using `tmux new-session -t alreadyExistingSessionName -s newSessionName`
+# client connected to *that window*. much more reasonable.
+# combined with using `tmux new-session -t alreadyexistingsessionname -s newsessionname`
 # we can have two views into the same session viewing different windows
 set -w -g aggressive-resize on
 
 
-# bind r refresh-client; display-message "client reloaded."
+# bind R refresh-client; display-message "client reloaded."
 bind r source-file ~/.tmux.conf \; display-message "tmux.conf reloaded."
 
 # toggle statusbar
@@ -101,17 +96,17 @@ bind Y display-message "#{pane_tty}"
 # show pane num
 bind q display-panes
 
-# Avoid delete window/pane confirmation
+# avoid delete window/pane confirmation
 unbind -n M-x # dangerously close to M-z
 bind -n M-d confirm-before -p "kill-pane #P? (y/n)" kill-pane
 
-# Choose tmux paste buffer
-bind * choose-buffer
+# choose tmux paste buffer
+bind P choose-buffer
 
-# Rename session
+# rename session
 bind-key . command-prompt -p "Session name:" "rename-session '%%'"
 
-# Swap window positon to the left/right
+# swap window positon to the left/right
 bind < run-shell 'tmux swap-window -t -1 \; select-window -t -1'
 bind > run-shell 'tmux swap-window -t +1 \; select-window -t +1'
 
@@ -145,7 +140,7 @@ bind s split-window -v -c '#{pane_current_path}'
 bind -n 'M-v' split-window -h
 bind -n 'M-s' split-window -v
 
-# Resize pane shortcuts
+# resize pane shortcuts
 bind -r H resize-pane -L 5
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
@@ -156,14 +151,14 @@ bind -n S-Right resize-pane -R 10
 bind -n S-Up    resize-pane -U 10
 bind -n S-Down  resize-pane -D 10
 
-# Vim keys to selec panes
+# vim keys to selec panes
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# Smart pane switching with awareness of Vim splits.
-# See: https://github.com/christoomey/vim-tmux-navigator
+# smart pane switching with awareness of vim splits.
+# see: https://github.com/christoomey/vim-tmux-navigator
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?|fzf)(diff)?$'"
 bind -n M-h if-shell "$is_vim" 'send-keys M-h'  'select-pane -L'
@@ -171,7 +166,7 @@ bind -n M-j if-shell "$is_vim" 'send-keys M-j'  'select-pane -D'
 bind -n M-k if-shell "$is_vim" 'send-keys M-k'  'select-pane -U'
 bind -n M-l if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
 
-# Setup 'v' to begin selection as in Vim
+# setup 'v' to begin selection as in vim
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi V send -X select-line
 bind -T copy-mode-vi y send -X copy-selection
@@ -233,5 +228,5 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # set -g @plugin 'datamadsen/nunchux'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# initialize tmux plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
