--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -57,7 +57,7 @@ set -g automatic-rename-format '#{b:pane_current_path}'
 
 set -w -g clock-mode-colour green
 
-set -g status-interval 5
+set -g status-interval 200
 set -g status-position bottom # bottom #top
 set -g status-justify left # absolute-centre
 set -g status-style "bg=default fg=colour7"
@@ -74,6 +74,8 @@ set -g window-status-format "•"
 set -g window-status-style "fg=color240"
 set -g window-status-current-format "•"
 set -g window-status-current-style "#{?window_zoomed_flag,fg=yellow,fg=white,nobold}"
+# if zoomed in, yellow fg, else if running ssh, blue fg, else white
+set -g window-status-current-style "#{?window_zoomed_flag,fg=yellow,#{?#{m:*ssh*,#{pane_current_command}},fg=blue,fg=white}}#{?window_zoomed_flag,,#{?#{m:*ssh*,#{pane_current_command}},,nobold}}"
 set -g window-status-bell-style "fg=red,nobold"
 
 # rather than constraining window size to the maximum size of any client
