--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -63,7 +63,7 @@ set -g status-justify left # absolute-centre
 set -g status-style "bg=default fg=colour7"
 set -g status-left " "
 set -g status-right-length 100
-set -g status-right "#[fg=colour240]#(ip.sh)(#(,ipl))#[fg=colour7]#[bg=default] #(battery.sh) "
+set -g status-right "#[fg=colour240]#(,btbc) - #[fg=colour240]#(ip.sh)(#(,ipl))#[fg=colour7]#[bg=default] #(battery.sh) "
 
 
 # set -g window-status-current-format "#[fg=white]#[bg=default]#W"
